# MDSticker

./: .gitignore  App.xaml  App.xaml.cs  BasicNoteData.cs  MDSticker.csproj  MDSticker.slnx  NoteDataProvider.cs  NoteSettingsHub.cs  Package.appxmanifest  README.md  Sticker.xaml  Sticker.xaml.cs  StickerManager.cs  app.manifest
Properties/: launchSettings.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  watcher.rs  window_mgr.rs
