[package]
name = "mdsticker"
version = "0.1.0"
description = "MDSticker – Markdown sticky notes that live-update from disk"
authors = ["you"]
edition = "2021"

# The `_lib` suffix is required to avoid a name collision between the lib and
# bin crates on Windows (see https://github.com/rust-lang/cargo/issues/8519).
[lib]
name = "mdsticker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-dialog          = "2"   # native file-open dialog
tauri-plugin-fs              = "2"   # filesystem access (plugin API surface)
tauri-plugin-autostart       = "2"   # OS startup toggle
tauri-plugin-single-instance = "2"   # prevent duplicate processes

# File-system change notifications (parent-dir watcher strategy)
notify     = "6"

# Serialization for settings.json
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Per-window unique IDs
uuid = { version = "1", features = ["v4"] }

# Async runtime (oneshot channels for dialog callbacks, etc.)
tokio = { version = "1", features = ["full"] }
